Cannot load DPX files. #53499

Closed
opened 2017-12-07 13:53:30 +01:00 by Sebastian Koenig · 3 comments

System Information
eOS 0.4.1, GTX980TI

Blender Version
Broken: (example: 2.79.1, 2e2e6e3

Short description of error
Blender does not open certain DPX files.
Exact steps for others to reproduce the error
I cannot open the attached DPX file.
I can only even try to load it when disabling filetype filtering in the file browser. If I do so and try to open the file, the console gives me an error: IMB_ibImageFromMemory: unknown fileformat (/home/sebastian/1-38_A002.0000811.dpx)
I tried this patch https:*developer.blender.org/P572 but that didn't work. Using this patch https:*developer.blender.org/D2944 works though.

1-38_A002.0000811.dpx

**System Information** eOS 0.4.1, GTX980TI **Blender Version** Broken: (example: 2.79.1, 2e2e6e3 **Short description of error** Blender does not open certain DPX files. **Exact steps for others to reproduce the error** I cannot open the attached DPX file. I can only even try to load it when disabling filetype filtering in the file browser. If I do so and try to open the file, the console gives me an error: `IMB_ibImageFromMemory: unknown fileformat (/home/sebastian/1-38_A002.0000811.dpx)` I tried this patch https:*developer.blender.org/P572 but that didn't work. Using this patch https:*developer.blender.org/D2944 works though. ![1-38_A002.0000811.dpx](https://archive.blender.org/developer/F1330642/1-38_A002.0000811.dpx)
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

This issue was referenced by bfbcc5e581

This issue was referenced by bfbcc5e5814412f979e120e427c21c8f322c62f5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53499
No description provided.