Fix T53499: Cannot load DPX files

The issue was caused by unspecified color transfer. New behavior gives same
result as other viewers here, so likely is fine :)